--- a/memento.html
+++ b/memento.html
@@ -287,6 +287,76 @@
 
 				<table class="help-table">
 					<tr>
+			  			<td class="help-table-head ">Git</td>
+			  		</tr>
+				</table>
+				<table class="help-table">
+					<tr>
+					  <td class="help-table-entry-1">Versionner un dossier avec GIT</td>
+					  <td class="help-table-command-1">git init</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-2">Verifier l'etat d'un dossier versionne avec GIT et de ses fichiers</td>
+					  <td class="help-table-command-2">git status</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-1">Ajouter un fichier</td>
+					  <td class="help-table-command-1">git add</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-2">Commiter un fichier</td>
+					  <td class="help-table-command-2">git commit -m "commentaire"</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-1">Indexer et commiter un fichier a la suite (raccourci)</td>
+					  <td class="help-table-command-1">git commit -am "commentaire"</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-2">Consulter l'historique des commit</td>
+					  <td class="help-table-command-2">git log</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-1">Récupérer un projet sur GitHub</td>
+					  <td class="help-table-command-1">git clone adresse_du_repository</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-2">Envoyer fichier sur GitHub (apres commit)</td>
+					  <td class="help-table-command-2">git push origin master</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-1">Recuperer un fichier depuis GitHub</td>
+					  <td class="help-table-command-1">git pull origin master</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-2">Verifier les branches presentes</td>
+					  <td class="help-table-command-2">git branch</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-1">Creer une branche nommee nom_branche</td>
+					  <td class="help-table-command-1">git branch nom_branche</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-2">Se placer sur une branche</td>
+					  <td class="help-table-command-2">git checkout nom_branche</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-1">Fusionner une branche nommee nom_branche avec la branche actuelle (sur laquelle on se trouve)</td>
+					  <td class="help-table-command-1">git merge nom_branche</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-2">Mettre de cote une modification (les fichiers ne prendront donc pas en compte la derniere modification en cours)</td>
+					  <td class="help-table-command-2">git stash</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-1">Prendre en compte la modification en cours (mise de cote jusqu'a present)</td>
+					  <td class="help-table-command-1">git stash pop</td>		
+					</tr>
+				</table>
+
+				<br><br>
+
+				<table class="help-table">
+					<tr>
 			  			<td class="help-table-head ">Subversion</td>
 			  		</tr>
 				</table>
