--- a/memento.html
+++ b/memento.html
@@ -285,6 +285,45 @@
 
 				<br><br>
 
+
+				<table class="help-table">
+					<tr>
+			  			<td class="help-table-head ">Screenshots</td>
+			  		</tr>
+				</table>
+				<table class="help-table">
+					<tr>
+					  <td class="help-table-entry-1">Faite une capture d'écran</td>
+					  <td class="help-table-command-1">gnome-screenshot</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-2">Prendre une capture de la fenêtre qui a le focus</td>
+					  <td class="help-table-command-2">gnome-screenshot --window</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-1">Prendre une capture de la fenêtre ou de l'écran, après le délai renseigné en secondes</td>
+					  <td class="help-table-command-1">gnome-screenshot --delay=10</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-2">Prendre une capture qui comprend les bords de l'écran</td>
+					  <td class="help-table-command-2">gnome-screenshot --include-border</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-1">Prendre une capture et ajouter un effet ombré tout autour</td>
+					  <td class="help-table-command-1">gnome-screenshot --border-effect=shadow</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-2">Prendre une capture de la fenêtre ou de l'écran, et entourer la capture d'un cadre</td>
+					  <td class="help-table-command-2">gnome-screenshot --border-effect=border</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-1">Prendre une capture de la zone que vous délimiterez avec la souris</td>
+					  <td class="help-table-command-1">gnome-screenshot --area</td>		
+					</tr>
+				</table>
+
+				<br><br>
+
 				<table class="help-table">
 					<tr>
 			  			<td class="help-table-head ">Git</td>
