--- a/Help3.html
+++ b/Help3.html
@@ -190,12 +190,14 @@
 
 				<p class="tags">
 				    <a href="#TimesUpdate">TimesUpdate</a>
+				    <a href="#nc2nc">nc2nc</a>
 				    <a href="#infoLocal2nc">infoLocal2nc</a>
 				    <a href="#UpdateInfo">UpdateInfo</a>
 				    <a href="#makeDDsys">makeDDsys</a>
 				    <a href="#AmdaUpdate">AmdaUpdate</a>
 				    <a href="#plots">AMDA_plots_logs</a>
-				    <a href="#SPICE">SPICE</a>
+				    <a href="#SPICE_kernels">SPICE_kernels</a>
+				    <a href="#SPICE_bodies">SPICE_index</a>
 				</p>
 
 				<h1>Formulaire</h1>
@@ -221,6 +223,20 @@
 					<tr>
 					  <td class="help-table-entry-2">Supprimer définitivement un fichier référencé dans *_times.nc</td>
 					  <td class="help-table-command-2">DDClearTimes *_times.nc</td>		
+					</tr>
+				</table>
+
+				<br><br>
+
+				<table class="help-table" id="nc2nc">
+			  		<tr>
+			  			<td class="help-table-head ">nc2nc : corriger start/stop times</td>
+			  		</tr>
+			  	</table>
+			  	<table class="help-table">
+			  		<tr>
+					  <td class="help-table-entry-1">Corriger start/stop times dans un fichier netCDF de données</td>
+					  <td class="help-table-command-1">nc2nc fichier.nc -bStartTime -eStopTime -gzip/unzip</td>		
 					</tr>
 				</table>
 
@@ -320,7 +336,7 @@
 
 				<br><br>
 
-				<table class="help-table" id="SPICE">
+				<table class="help-table" id="SPICE_kernels">
 					<tr>
 			  			<td class="help-table-head ">SPICE kernels</td>
 			  		</tr>
@@ -341,6 +357,84 @@
 					<tr>
 					  <td class="help-table-entry-2">FK (Frame Kernel)</td>
 					  <td class="help-table-command-2">Placement/changement de référentiel</td>		
+					</tr>
+				</table>
+
+				<br><br>
+
+				<table class="help-table" id="SPICE_bodies">
+					<tr>
+			  			<td class="help-table-head ">SPICE celestial bodies indexes</td>
+			  		</tr>
+				</table>
+				<table class="help-table">
+					<tr>
+					  <td class="help-table-entry-1">1</td>
+					  <td class="help-table-command-1">MERCURY BARYCENTER</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-2">2</td>
+					  <td class="help-table-command-2">VENUS BARYCENTER</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-1">3</em></td>
+					  <td class="help-table-command-1">EARTH BARYCENTER</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-2">4</td>
+					  <td class="help-table-command-2">MARS BARYCENTER</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-1">5</em></td>
+					  <td class="help-table-command-1">JUPITER BARYCENTER</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-2">6</td>
+					  <td class="help-table-command-2">SATURN BARYCENTER</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-1">7</em></td>
+					  <td class="help-table-command-1">URANUS BARYCENTER</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-2">8</td>
+					  <td class="help-table-command-2">NEPTUNE BARYCENTER</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-1">9</em></td>
+					  <td class="help-table-command-1">PLUTO BARYCENTER</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-2">10</td>
+					  <td class="help-table-command-2">SUN</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-1">199</em></td>
+					  <td class="help-table-command-1">MERCURY</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-2">299</td>
+					  <td class="help-table-command-2">VENUS</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-1">301</em></td>
+					  <td class="help-table-command-1">MOON</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-2">399</td>
+					  <td class="help-table-command-2">EARTH</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-1">401</em></td>
+					  <td class="help-table-command-1">PHOBOS</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-2">402</td>
+					  <td class="help-table-command-2">DEIMOS</td>		
+					</tr>
+					<tr>
+					  <td class="help-table-entry-1">499</em></td>
+					  <td class="help-table-command-1">MARS</td>		
 					</tr>
 				</table>
 
