Help3 --> SPICE bodies indexes --> MAVEN

--- a/Help3.html
+++ b/Help3.html
@@ -436,6 +436,10 @@
 					  <td class="help-table-entry-1">499</em></td>
 					  <td class="help-table-command-1">MARS</td>		
 					</tr>
+					<tr>
+					  <td class="help-table-entry-1">-202</em></td>
+					  <td class="help-table-command-1">MAVEN</td>		
+					</tr>
 				</table>
 
   			</div>
