Help : New dataset

--- a/DataUpdate.html
+++ b/DataUpdate.html
@@ -5,86 +5,7 @@
 	<head>
 	<meta charset="UTF-8">
 	<title>Mise a jour des donnees</title>
-	<style type="text/css">
-
-		h1 { 
-
-			border-bottom: 1px solid #7a7a7a;
-
-			font-size: 1.5em;
-		}
-
-		h2 { font-size: 1.325em; }
-		h3{ font-size: 1.25em; }
-		h4{ font-size: 1.5em; } 
-		h5, h6{ font-size: 1em; }
-
-		ul { 
-	
-			margin-left: 20px; 
-			margin-bottom: 1.5em;
-
-			list-style: square inside;
-			
-			overflow: hidden;
-		}
-
-		ul ul, ul ol {
-			
-			margin-bottom: 0;
-
-			list-style: disc inside;
-		}
-
-		ol {
-			
-			margin-left: 20px;
-			margin-bottom: 1.5em;
-
-			list-style: decimal inside;
-			
-			overflow: hidden;
-		}
-
-		ol ol, ul ol {
-			
-			margin-bottom: 0;
-
-			list-style: lower-roman inside;
-		}
-
-		.main {
-
-			position: relative; /* NEW */
-
-			height: auto !important;
-			min-height: 100%;
-
-			clear: both;
-		}
-
-		.container {
-
-			position: relative;
-
-			padding-bottom: 6rem; /* NEW */
-			margin: 0 auto;
-			width: 60%;
-		}
-
-		.code {
-
-			display: inline-block;
-			border-width: 2px;
-			border-style: solid;
-			border-color: black;
-			background-color: black;
-			color: white;
-			width: 100%;
-		}
-
-
-	</style>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 
 	<body>
